syntax = "proto3";

package protobuf;

option optimize_for = SPEED;

message SupportedValues {
  oneof kind {
    string string = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    uint64 uint64 = 5;
    bool bool = 6;
    double double = 7;
    float float = 8;
    bytes bytes = 9;
  }
}

message SendDataCommand {
  string channel = 1;
  SupportedValues value = 2;
}

message GetDataCommand {
  string channel = 2;
}

message GetLogsCommand {
}

message ReplyDataCommand {
  SupportedValues value = 2;
}

message ReplyLogsCommand {
  repeated string logs = 1;
}

message RegisterCommand {
  string machine_name = 1;
}

message SendLogsCommand {
  repeated string logs = 1;
}

message Push {
  oneof Payload {
    SendDataCommand send = 1;
  }
}

message Publish {
  oneof Payload {
    SendDataCommand data = 1;
    SendLogsCommand logs = 2;
  }
}

message Request {
  oneof Payload {
    GetDataCommand data = 1;
    GetLogsCommand logs = 2;
  }
}

message Reply {
  oneof Payload {
    ReplyDataCommand data = 1;
    ReplyLogsCommand logs = 2;
  }
}